[gd_scene load_steps=6 format=3 uid="uid://dtqjiei0niafu"]

[ext_resource type="Script" path="res://scripts/Control.gd" id="1_jco4b"]
[ext_resource type="Texture2D" uid="uid://b5covxis0t8o3" path="res://scenes/enemy1_Mutant_diffuse.png" id="2_ruvrs"]
[ext_resource type="FontFile" uid="uid://ixdc07xqjg0b" path="res://chrusty-rock-font/ChrustyRock-ORLA.ttf" id="3_ggjdm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cdtm2"]
texture = ExtResource("2_ruvrs")
modulate_color = Color(0.498039, 0.498039, 0.498039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s80g3"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jco4b")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -987.0
offset_top = -551.5
offset_right = 987.0
offset_bottom = 551.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_cdtm2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -69.5
offset_right = 155.0
offset_bottom = 69.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_s80g3")
text = "Play
"

[node name="options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_s80g3")
text = "Options
"

[node name="exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_s80g3")
text = "Exit
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -209.0
offset_top = -321.0
offset_right = 233.0
offset_bottom = -211.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.764706, 1, 0.745098, 1)
theme_override_fonts/font = ExtResource("3_ggjdm")
theme_override_font_sizes/font_size = 80
text = "Sword fight
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -221.0
offset_top = 209.0
offset_right = 221.0
offset_bottom = 319.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.764706, 1, 0.745098, 1)
theme_override_font_sizes/font_size = 35
text = "Made with Godot 4.2
Developed by saiefadnan078@gmail.com"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
